Refatoração melhoria na camada service-model e resiliência